stylesheets/stylesheet.css
/* Reset and body styling */
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

:root {
  --red: #9f000f;
}

html {
  font-size: 16px;
}

body {
  background-size: cover;
  font-family: "Proxima Nova", sans-serif;
  font-weight: lighter;
  width: 100%;
  background-color: #d3d3d3;
  padding-top: 80px;
}

nav {
  position: fixed;
  top: 0;
  height: 130px;
  width: 100%;
  background: #eee;
  padding: 20px;
  z-index: 3;
  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
  transition: all 0.3s ease; /* Add smooth transition for any change */
}

.nav-header {
  font-size: 2.4rem;
  font-weight: lighter;
  padding-left: 30px;
  color: var(--red);
  text-decoration: none;
}

.nav-header:hover {
  text-decoration: none;
}

nav ul {
  list-style-type: none;
  display: flex;
  justify-content: flex-end;
  margin-bottom: 20px;
}

nav ul li {
  margin-right: 20px;
}

nav ul li a {
  text-decoration: none;
  color: black;
  font-size: 1.3rem;
}

nav ul li a:hover {
  color: var(--red);
  text-decoration: none;
}

#portfolio {
  padding-top: 120px;
}

.porfolio-container {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  gap: 20px;
  padding: 20px;
  max-width: 1200px;
  margin: 0 auto;
}

.portfolio-item:not(:first-child) {
  margin-top: 40px;
}

h3 {
  display: block;
  text-align: center;
  color: black;
  font-size: 40px;
  font-weight: 200;
  padding: 40px 0;
}

.portfolio-tile {
  background-color: #fff;
  border-radius: 8px;
  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
  width: 920px;
  overflow: hidden;
  text-align: center;
  margin-bottom: 40px;
  transition: transform 0.3s ease;
  overflow: hidden;
}

.portfolio-tile img {
  display: block;
  width: 100%;
  height: auto;
  max-width: 100%;
  object-fit: cover;
}

.portfolio-tile:hover img {
  transform: scale(1.02);
  transition: transform 0.3s ease;
}

a img:hover {
  opacity: 0.8;
}

a h3:hover {
  color: var(--red);
}

.portfolio-caption {
  font-size: 18px;
  line-height: 1.5;
  color: #555;
  text-align: center;
  max-width: 800px;
  margin: 10px auto;
  padding: 0 20px;
  font-weight: 300;
}

.portfolio-item a {
  text-decoration: none;
  color: inherit;
}

/* Responsive layout */
@media (max-width: 768px) {
  .portfolio-caption {
    font-size: 16px;
  }
}

